[gd_scene load_steps=5 format=3 uid="uid://dd4piesbtefjx"]

[ext_resource type="Script" path="res://UI/MainMenu.gd" id="1_iu1ew"]
[ext_resource type="TileSet" uid="uid://ogq2ed0qmqh0" path="res://Maps/Ground_Set_1.tres" id="2_ylne6"]
[ext_resource type="FontFile" uid="uid://dpurp6md8xx6r" path="res://UI/Font/SuperPixels-Regular.ttf" id="3_psf34"]
[ext_resource type="AudioStream" uid="uid://xefeljtb3pnn" path="res://Audio/Music/NikiN - 80s Retro Horror Intro Logo.wav" id="4_x3dck"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_iu1ew")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 321.0
offset_bottom = 210.0
color = Color(0, 0, 0, 1)

[node name="Label2" type="Label" parent="."]
offset_left = 76.0
offset_top = 50.0
offset_right = 224.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 8
text = "Developed by hellocrystxl"
horizontal_alignment = 2

[node name="Title" type="Label" parent="."]
offset_left = 93.0
offset_top = 24.0
offset_right = 226.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("3_psf34")
theme_override_font_sizes/font_size = 31
text = "SEEN"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TileMap2" type="TileMap" parent="."]
position = Vector2(-65, 228)
tile_set = ExtResource("2_ylne6")
format = 2
layer_0/tile_data = PackedInt32Array(-262141, 1835008, 3, -196605, 1900544, 2, -327677, 1835008, 2, -262140, 1835008, 2, -196604, 2490368, 11, -327676, 2490368, 11, -262139, 1835008, 2, -196603, 2490368, 11, -327675, 1835008, 2, -262138, 1900544, 3, -196602, 1900544, 3, -327674, 2490368, 11, -262137, 1835008, 2, -196601, 1835008, 3, -327673, 1835008, 3, -262136, 1835008, 2, -196600, 1900544, 3, -327672, 1900544, 3, -262135, 1835008, 3, -196599, 1900544, 3, -327671, 2490368, 11, -196598, 1900544, 2, -327670, 1900544, 2, -196597, 2490368, 11, -196596, 1835008, 2, -196595, 1835008, 3, -196594, 1835008, 2, -196593, 2490368, 11, -196592, 1900544, 3, -327664, 1900544, 2, -262127, 1900544, 2, -196591, 2490368, 11, -327663, 1900544, 3, -262126, 1900544, 3, -196590, 1835008, 3, -327662, 1900544, 2, -262125, 1900544, 2, -196589, 2490368, 11, -327661, 1900544, 2, -262124, 2490368, 11, -196588, 2490368, 11, -327660, 2490368, 11, -262123, 1835008, 2, -196587, 1835008, 3, -327659, 1835008, 3, -262122, 1835008, 2, -196586, 1900544, 3, -327658, 1900544, 2, -262121, 2490368, 11, -196585, 1835008, 2, -327657, 1835008, 3, -262120, 1835008, 2, -196584, 2490368, 11, -327656, 1835008, 3, -196583, 1966080, 2, -262142, 1769472, 2, -327678, 1769472, 2, -393214, 1769472, 1, -393213, 1835008, 1, -393212, 1835008, 1, -196606, 1769472, 2, -131068, 2359296, 1, -131069, 2293760, 1, -131070, 2228224, 1, -393211, 1835008, 1, -131067, 2293760, 1, -393210, 1900544, 1, -131066, 2359296, 1, -393209, 1900544, 1, -131065, 2293760, 1, -393208, 1835008, 1, -131064, 2293760, 1, -393207, 1835008, 1, -131063, 2359296, 1, -393206, 1900544, 1, -131062, 2293760, 1, -393205, 1900544, 1, -393200, 1900544, 1, -393199, 1835008, 1, -131055, 2293760, 1, -393198, 1900544, 1, -131054, 2293760, 1, -393197, 1900544, 1, -131053, 2293760, 1, -393196, 1835008, 1, -131052, 2293760, 1, -393195, 1900544, 1, -131051, 2293760, 1, -393194, 1835008, 1, -131050, 2293760, 1, -393193, 1900544, 1, -131049, 2359296, 1, -393192, 1900544, 1, -131048, 2359296, 1, -327655, 1966080, 2, -262119, 1966080, 2, -393191, 1966080, 1, -131047, 2424832, 1, -131056, 2359296, 1, -131057, 2293760, 1, -131058, 2359296, 1, -131059, 2293760, 1, -131060, 2293760, 1, -131061, 2359296, 1, -262128, 1835008, 3, -262133, 1900544, 3, -262134, 1900544, 2, -851964, 524291, 1, -458729, 720899, 5, -327669, 1835008, 3, -655355, 393217, 2, -589819, 393217, 3, -524283, 393217, 4, -655354, 458753, 2, -589818, 458753, 3, -524282, 458753, 4, -458746, 458753, 5, -655353, 524289, 2, -589817, 524289, 3, -524281, 524289, 4, -458745, 524289, 5, -655352, 589825, 2, -589816, 589825, 3, -524280, 589825, 4, -917484, 524291, 1)

[node name="Options" type="VFlowContainer" parent="."]
offset_left = 124.0
offset_top = 103.0
offset_right = 236.0
offset_bottom = 185.0

[node name="StartButton" type="Button" parent="Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_psf34")
theme_override_font_sizes/font_size = 17
text = "Play"
metadata/_edit_use_anchors_ = true

[node name="Fullscreen" type="Button" parent="Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_psf34")
theme_override_font_sizes/font_size = 6
text = "Fullscreen"

[node name="Credit" type="Button" parent="Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_psf34")
theme_override_font_sizes/font_size = 6
text = "Credits"

[node name="Quit" type="Button" parent="Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_psf34")
theme_override_font_sizes/font_size = 6
text = "Quit"

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_x3dck")
autoplay = true

[connection signal="pressed" from="Options/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Options/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="Options/Credit" to="." method="_on_credit_pressed"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_quit_pressed"]
